Fixing Date Overlapping Issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,14 +49,16 @@ body {
 
 .modal-body {
   position: absolute;
-  bottom: 10%;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%); /* start slightly smaller */
   background-color: rgb(255, 255, 255);
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  border-radius: 10px;
-  width: 300px;
+  border-radius: 12px;
+  width: 40%;
+  border: 2px solid rgb(105, 222, 156);
+  transition: all 0.25s ease; /* smooth animation */
 }
 
 .dark .modal-body {
